--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,8 @@
-
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
-    id 'androidx.navigation.safeargs.kotlin' version '2.4.1' apply(false)
+    id 'androidx.navigation.safeargs.kotlin'
 }
 
 android {
@@ -73,8 +72,9 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:4.5.0"
 
     // Navigation Components
-    implementation "androidx.navigation:navigation-fragment-ktx:2.4.1"
-    implementation "androidx.navigation:navigation-ui-ktx:2.4.1"
+    def nav_version = "2.4.1"
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
